# neuro_forge

./: README.md  main.py  pyproject.toml
scripts/: train.py
src/: interface.py
src/layers/attention/: multiHeadAttention.py  selfAttention.py
src/modeling/: blocks.py
